10 April 2017: Wouter
	- harden-algo-downgrade: no also makes unbound more lenient about
	  digest algorithms in DS records.

10 April 2017: Ralph
	- Remove ECS option after REFUSED answer.
	- Fix small memory leak in edns_opt_copy_alloc.
	- Respip dereference after NULL check.
	- Zero initialize addrtree allocation.
	- Use correct identifier for SHM destroy.

7 April 2017: George
	- Fix pythonmod for cb changes.
	- Some whitespace fixup.

7 April 2017: Ralph
	- Unlock view in respip unit test

6 April 2017: Ralph
	- Generalise inplace callback (de)registration
	- (de)register inplace callbacks for module id
	- No unbound-control set_option for ECS options
	- Deprecated client-subnet-opcode config option
	- Introduced client-subnet-always-forward config option
	- Changed max-client-subnet-ipv6 default to 56 (as in RFC)
	- Removed extern ECS config options
	- module_restart_next now calls clear on all following modules
	- Also create ECS module qstate on module_event_pass event
	- remove malloc from inplace_cb_register

6 April 2017: Wouter
	- Small fixup for documentation.
	- iana portlist update
	- Fix respip for braces when locks arent used.
	- Fix pythonmod for cb changes.

4 April 2017: Wouter
	- Fix #1244: document that use of chroot requires trust anchor file to
	  be under chroot.
	- iana portlist update

3 April 2017: Ralph
	- Do not add current time twice to TTL before ECS cache store.
	- Do not touch rrset cache after ECS cache message generation.
	- Use LDNS_EDNS_CLIENT_SUBNET as default ECS opcode.

3 April 2017: Wouter
	- Fix #1217: Add metrics to unbound-control interface showing
	  crypted, cert request, plaintext and malformed queries (from
	  Manu Bretelle).
	- iana portlist update

27 March 2017: Wouter
	- Remove (now unused) event2 include from dnscrypt code.

24 March 2017: George
	- Fix to prevent non-referal query from being cached as referal when the
	  no_cache_store flag was set.

23 March 2017: Wouter